layout issues

--- a/app/assets/styles/_user.scss
+++ b/app/assets/styles/_user.scss
@@ -106,6 +106,11 @@
   margin-bottom: 160px;
 }
 
+.forgot-form-margin {
+  margin-top: 30px;
+  margin-bottom: 300px;
+}
+
 .signup-btn{
   margin-top: 30px;
 }
